--- a/app/(dashboard)/dashboard/page.module.css
+++ b/app/(dashboard)/dashboard/page.module.css
@@ -37,10 +37,10 @@
 }
 
 .chartPlaceholder {
-  background-color: hsl(0, 0%, 12%);
+  background-color: var(--bg-main);
   /* min-height: 500px; */
   border-radius: 12px;
-  border: 1px solid #2a2a2a;
+  /* border: 1px solid var(--border-color); */
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -64,6 +64,7 @@
 
 .card {
   background-color: #17171e;
+  background-color: var(--bg-input);
   border-radius: 10px;
   flex: 1;
   padding: calc(var(--padding) * 2);
@@ -76,17 +77,20 @@
 
 .chartTitle {
   margin-bottom: 1rem;
+  color: var(--text-main);
 }
 
 .chartSubtitle {
-  color: #5b5b5b;
+  color: var(--text-main);
+  opacity: 80%;
   font-weight: bold;
 }
 
 .cardHeader {
   font-size: 1rem;
   font-weight: bold;
-  color: #5b5b5b;
+  color: var(--text-main);
+  opacity: 80%;
   text-align: center;
 }
 
@@ -105,6 +109,7 @@
 .cardValue {
   font-size: 2rem;
   font-weight: bold;
+  color: var(--text-main);
 }
 
 .cardFooter {
